samples/_failures_safe/1761043050_1fc5a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56618bc7.c: In function ‘main’:
./samples/SAFE/__tmp_56618bc7.c:134: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_56618bc7.c:133:5: error: expected declaration or statement at end of input
  133 |     switch
      |     ^~~~~~
